--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,9 @@
         "php": "~7.3.0",
         "tracy/tracy": "^2.7",
         "symfony/http-foundation": "^4.3",
-        "nikic/fast-route": "^1.3"
+        "nikic/fast-route": "^1.3",
+        "twig/twig": "^2.12",
+        "rdlowrey/auryn": "^1.4"
     },
     "autoload": {
         "psr-4": {
