--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,13 @@
         "symfony/http-foundation": "^4.3",
         "nikic/fast-route": "^1.3",
         "twig/twig": "^2.12",
-        "rdlowrey/auryn": "^1.4"
+        "rdlowrey/auryn": "^1.4",
+        "doctrine/dbal": "^2.10"
     },
     "autoload": {
         "psr-4": {
-            "SocialNews\\": "src/"
+            "SocialNews\\": "src/",
+            "Migrations\\": "migrations/"
         }
     }
 }
